@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-15T08:14:32Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2023-10-15T16:14:47Z",
+  "count" : 58,
+  "count_minmax" : [ 1, 58 ],
+  "count_decinc" : [ -0, +58 ],
+  "uniques" : 11,
+  "uniques_minmax" : [ 1, 11 ],
+  "uniques_decinc" : [ -0, +11 ]
 }
