@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-15T08:14:32Z",
-  "count_outdated" : 3044,
-  "uniques_outdated" : 1235,
-  "count" : 3121,
-  "uniques" : 1293,
+  "timestamp" : "2023-10-15T16:14:47Z",
+  "count_outdated" : 3046,
+  "uniques_outdated" : 1236,
+  "count" : 3178,
+  "uniques" : 1303,
   "clones" : [
-    {
-      "timestamp": "2023-10-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-02T00:00:00Z",
       "count": 7,
@@ -133,12 +124,12 @@
     },
     {
       "timestamp": "2023-10-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 58,
+      "count_minmax": [ 1, 58 ],
+      "count_decinc": [ 0, 58 ],
+      "uniques": 11,
+      "uniques_minmax": [ 1, 11 ],
+      "uniques_decinc": [ 0, 11 ]
     }
   ]
 }
