@@ -1,12 +1,7 @@
 {
-  "count": 76,
-  "uniques": 40,
+  "count": 132,
+  "uniques": 46,
   "clones": [
-    {
-      "timestamp": "2023-10-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-02T00:00:00Z",
       "count": 7,
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2023-10-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 58,
+      "uniques": 11
     }
   ]
 }
