@@ -1,3 +1,12 @@
+2023-10-15T16:14:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6525150008 # 1990
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-15
+* notice: last 14d: unq all: 46 132
+* notice: prev accum: outdated-unq outdated-all / unq all: 1235 3044 / 1293 3121
+* notice: next accum: outdated-unq outdated-all / unq all: 1236 3046 / 1303 3178
+* notice: prev exec diff / last date diff / accum: unq all: +10 +57 -0 -0 / +11 +58 -0 -0 / 11 58
+* notice: removed / changed dates: [2023-10-01] / [2023-10-15]
+
 2023-10-15T08:14:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6522913725 # 1989
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-15
